# macti_lib

./: .gitignore  .setup.py.swp  01.ipynb  README.md  evaluacion.py  funcion1.py  prueba.py  prueba2.py  prueba3.py  pyproject.toml  respaldo.py  setup.py  test.ipynb  untitled.py  untitled1.py  untitled2.py  untitled3.py  untitled4.py
.ans/macti/: .__ans_1  .__fee_1
macti/: PruebaParquet  Untitled.ipynb  ans.parquet  evaluacion.py  evaluation.py  feed.parquet  grader.py  interactivo_test.ipynb  matem.py  test_evaluation.ipynb  test_visual.ipynb  visual.py
macti/CURSO/Tema1/: Untitled.ipynb  evaluation.py  test_evaluation.ipynb
macti/Curso/Tema1/: evaluation.py  test_evaluation.ipynb
macti/FDM/: testSolvers.py
macti/MetodoEuler/: euler.py  partrack.py
macti/PyNoxtli/: .gitignore
macti/PyNoxtli/fvm/: README  numScheme.py  pde.py  sAdvDiff.py  sDiffusion.py  tAdvDiff.py  tDiffusion.py
macti/PyNoxtli/geo/: __init__.py  domain.py  line.py  mesh.pyOLD  rectangle.py
macti/PyNoxtli/inout/: INICIO.py  hdf5_tools.py
macti/PyNoxtli/la/: __init__.py  csr_fvm.py  csr_fvm_ijk_1D.py  csr_fvm_ijk_2D.py  linsys.py
macti/SistemasLineales/: KrylovSolvers.py  eigen_fc.py  statSolvers.py  testSolvers.py
macti/fdm/: solvers.py
src/macti/: __init__.py
src/macti.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/resources/: assignments_update.csv  calificador.ipynb  interactivo_test.ipynb  macti_nbg_qs.py  plantilla.ipynb  preproc_gb.ipynb  q1_plantilla.ipynb  test_evaluation.ipynb  test_visual.ipynb
tests/: test_evaluacion.py
(+145 files in other folders)
