[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macti"
version = "0.3.0"
description = "Biblioteca para evaluaci칩n de Jupyter Notebooks, Visualizaci칩n de datos y Simulaci칩n de flujos, todo orientado a la ense침anza en nivel licenciatura."
authors = [{ name = "Luis Miguel de la Cruz Salas", email = "luiggi@igeofisica.unam.mx" }]
readme = "README.md"
dependencies = ["pyarrow", "sympy", "flopy"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["macti", "macti.math", "macti.vis", "macti.mf6"]
#license-files = ["MIT"]

[tool.setuptools.package-data]
"biblio" = ["../resources/*"]
